# 1c-submission

./: CMakeLists.txt  README.md  test_input.txt
inc/: code_tree.hpp  decoder.hpp  decoder.hpp.gch  main.hpp  tokenizer.hpp
src/: main.cpp
test/: tests.cpp
